# Proteomic-drug-discovery

./: .dockerignore  .gitignore  CODERUNNER.sh  Dockerfile  LICENSE  README.md  deepsearch_flow.smk  install_packages.R  manuscript_flow.sh  pyproject.toml  requirements.txt  run_all.sh  scriptrunner.sh
BasuShaon-DIA-MS-tools-119cf56/: .gitignore  main.py  requirements.txt
code/: device_gradientbooster.py  device_gradientboostingmachine.py  device_ml_helpers.py  device_summarystatistics.py  device_supportfunctions.py  fda_01_globalvarianceanalysis.py  fda_01_globalvarianceanalysis_250304a.py  fda_02_limma_drug.R  fda_02_limma_drug_250304a.R  fda_03_de_pca.py  fda_03_de_pca_250304a.py  fda_04_de_gsea.py  fda_04_de_gsea_250304a.py  protacs_01_globalvarianceanalysis.py  protacs_01_globalvarianceanalysis_250304a.py  protacs_02_azmetadata_cluster.py  protacs_02_azmetadata_cluster_250306a.py  protacs_03_azmetadata_dendrogram.R  protacs_03_azmetadata_dendrogram_250306a.R  protacs_04_limma_metadataconstructor.py  protacs_04_limma_metadataconstructor_250304a.py  protacs_05_limma_cluster_0p1.R  protacs_05_limma_cluster_0p1_250305a.R  protacs_06_limma_cluster_1p0.R  protacs_06_limma_cluster_1p0_250305a.R  protacs_07_limma_cluster_10.R  protacs_07_limma_cluster_10_250305a.R  protacs_08_limma_drug.R  protacs_08_limma_drug_250305a.R  protacs_09_de_pca.py  protacs_09_de_pca_250305a.py  protacs_10_de_gsea.py  protacs_10_de_gsea_250305.py  protacs_11_de_stringnetworkenrich.py  protacs_11_de_stringnetworkenrich_250305a.py  protacs_12_de_regression.py  protacs_12_de_regression_250305a.py  (+39 more)
(+133 files in other folders)
